<resources>
    <!-- 全局以及Splash、Welcome -->
    <string name="app_name">QUIN</string>
    <string name="use_it_now">立即使用</string>
    <string name="open_permissions">开启QUIN</string>
    <string name="open_permissions_detail">为了您能正常使用QUIN应用,需要以下信息</string>
    <string name="storage_permissions">存储空间</string>
    <string name="device_info_permissions">设备信息</string>
    <string name="location_info_permissions">位置信息</string>
    <string name="check">查看</string>
    <string name="next_step">下一步</string>

    <!-- MainActivity -->
    <string name="main_tab_two">频道</string>
    <string name="main_tab_three">动态</string>


    <!-- 登陆 -->
    <string name="login_username">请输入手机号</string>
    <string name="login_psaaword">请输入密码</string>
    <string name="login_login">登  陆</string>
    <string name="login_register">注  册</string>
    <string name="login_self">下次自动登陆</string>
    <string name="login_forget_password">忘记密码</string>
    <string name="login_find_username">找回用户名</string>

    <!-- 注册 -->
    <string name="register_country">国家地区</string>
    <string name="register_phone">手机号</string>
    <string name="register_assent_protocol">同意协议并注册</string>
    <string name="register_pwd">密码</string>
    <string name="register_pwd_hint">请输入密码</string>
    <string name="register_pwd_hint_d">请再次输入密码</string>
    <string name="register_country_list">国家和地区列表</string>
    <string name="register_result">注册结果</string>
    <string name="register_complete">完成</string>
    <string name="register_result_content">注册成功，赶紧登录吧!</string>

    <!-- 简单名词 -->
    <string name="home">首页</string>

    <!-- 个人信息 -->
    <string name="user_info">账号资料</string>
    <string name="user_info_head">头像</string>
    <string name="user_info_name">昵称</string>
    <string name="user_info_id">UID</string>
    <string name="user_info_gender">性别</string>
    <string name="user_info_qianming">个性签名</string>
    <string name="user_info_out">退出登录</string>
    <string name="user_head_all">旋转缩放</string>
    <string name="user_head_zoom">仅缩放</string>
    <string name="user_head_rotate">仅旋转</string>

    <!-- 音乐 -->
    <string name="music_of_mine">我的音乐</string>
    <string name="music_of_local">本地音乐</string>
    <string name="music_open_prime">开通会员</string>


    <!-- dialog -->
    <string name="head_select">头像选择</string>
    <string name="camera">头像选择</string>
    <string name="picture">头像选择</string>
    <string name="cancel">取消</string>

    <!-- 其它 -->
    <string name="other_function">其它功能</string>
    <string name="other_custom_view">自定义View</string>
    <string name="other_encryto">加解密测试</string>

    <!-- 游戏 -->
    <string name="game_main">游戏</string>

    <string-array name="right_title_name">
        <item>姓名</item>
        <item>年龄</item>
        <item>评分</item>
        <item>进攻</item>
        <item>防守</item>
        <item>低位A</item>
        <item>中位A</item>
        <item>高位A</item>
        <item>低位D</item>
        <item>中位D</item>
        <item>高位D</item>
    </string-array>

</resources>
