<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.login.LoginActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:orientation="vertical">

        <ImageView
            android:scaleType="fitCenter"
            android:src="@drawable/nba"
            android:layout_marginTop="80dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="40dp"
            android:layout_marginTop="25dp">

            <EditText
                android:theme="@style/LoginEditText"
                android:paddingLeft="5dp"
                android:id="@+id/et_username"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:hint="@string/login_username"
                android:maxLength="11"
                android:textColorHint="@color/hint_color"
                android:inputType="number"
                android:layout_alignParentTop="true"
                android:layout_alignParentStart="true" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="40dp">

            <EditText
                android:theme="@style/LoginEditText"
                android:paddingLeft="5dp"
                android:id="@+id/et_password"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:maxLength="14"
                android:maxLines="1"
                android:textColorHint="@color/hint_color"
                android:hint="@string/login_psaaword"
                android:layout_alignParentTop="true"
                android:layout_alignParentStart="true" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_marginLeft="40dp"
            android:layout_marginRight="40dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp">



            <ImageView
                android:id="@+id/iv_isRemenber"
                android:background="@drawable/login_select_b"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_centerVertical="true" />

            <TextView
                android:id="@+id/tv_isRemenber"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_toRightOf="@id/iv_isRemenber"
                android:text="@string/login_self"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/tv_fogot_pwd"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:text="@string/login_forget_password"
                android:textColor="@color/colorPrimary"
                android:textSize="16sp" />
        </RelativeLayout>

        <Button
            android:id="@+id/btn_login"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="40dp"
            android:layout_marginTop="25dp"
            android:background="@drawable/btn_login_login_bg"
            android:text="@string/login_login"
            android:textColor="@color/colorWhite"
            android:textSize="16sp" />

        <Button
            android:id="@+id/tv_register"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="40dp"
            android:layout_marginTop="25dp"
            android:background="@drawable/btn_login_register_bg"
            android:text="@string/login_register"
            android:textColor="@color/colorPrimary"
            android:textSize="16sp" />

    </LinearLayout>


    <RelativeLayout
        android:layout_marginBottom="20dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <TextView
            android:padding="5dp"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:id="@+id/tv_fogot_username"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login_find_username"
            android:textColor="@color/colorPrimary"
            android:textSize="16sp" />
    </RelativeLayout>

</LinearLayout>