<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="@color/colorWhite" >

    <TextView
        android:layout_alignParentTop="true"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:typeface="serif"
        android:text="@string/head_select"
        android:textColor="@color/colorBlack"
        android:textSize="20sp" />

    <include layout="@layout/line_match"/>

    <LinearLayout
        android:layout_marginTop="15dp"
        android:layout_marginBottom="15dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/titlelayout"
        android:gravity="center"
        android:orientation="horizontal" >

        <LinearLayout
            android:id="@+id/ll_camera"
            android:layout_weight="1"
            android:orientation="vertical"
            android:layout_width="0dp"
            android:layout_height="match_parent">
            <ImageView
                android:layout_gravity="center_horizontal"
                android:src="@drawable/camera"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <TextView
                android:layout_gravity="center_horizontal"
                android:text="@string/camera"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>
        <LinearLayout
            android:id="@+id/ll_picture"
            android:layout_weight="1"
            android:orientation="vertical"
            android:layout_width="0dp"
            android:layout_height="match_parent">
            <ImageView
                android:layout_gravity="center_horizontal"
                android:src="@drawable/picture"
                android:layout_width="45dp"
                android:layout_height="wrap_content" />
            <TextView
                android:layout_gravity="center_horizontal"
                android:text="@string/picture"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>
    </LinearLayout>

    <include layout="@layout/line_match"/>

    <Button
        android:id="@+id/btnCancel"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginLeft="0dp"
        android:layout_marginRight="0dp"
        android:background="@color/colorWhite"
        android:gravity="center"
        android:text="@string/cancel"
        android:textColor="@color/colorBlack"
        android:textSize="20sp"
        android:visibility="visible" />


</LinearLayout>